[package]
authors = ["haras <social@haras.anonaddy.me>"]
name = "jammin"
description = "Audio thing"
version = "0.1.0"
license = "MIT"
repository = "https://github.com/haras-unicorn/jammin"
edition = "2021"

[dependencies]
anyhow = { version = "1.0.86", features = ["backtrace"] }
async-trait = "0.1.80"
chrono = { version = "0.4.38", features = ["serde"] }
clap = { version = "4.5.4", features = ["derive"] }
directories = "5.0.1"
flume = { version = "0.11.0", features = ["async"] }
hound = "3.5.1"
iced = "0.12.1"
iced_futures = { version = "0.12.0", features = ["tokio"] }
itertools = "0.11.0"
num_cpus = "1.16.0"
rand = { version = "0.8.5", features = ["serde"] }
rayon = "1.10.0"
regex = "1.10.4"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
shellexpand = "3.1.0"
tokio = { version = "1.37.0", features = ["full"] }
tokio-scoped = "0.2.0"
toml = "0.8.13"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
web-audio-api = { version = "0.45.0", features = ["cpal-jack"] }
